# llm-text-processor

./: .gitignore  .hgignore  Jenkinsfile  pyproject.toml  requirements.txt
app/: main.py
app/config/: application.yaml  logging.yaml
app/controllers/: __init__.py  base_controller.py  controllers_config.py  healthcheck.py  recursive_chunker.py
app/providers/: config_provider.py  logger_provider.py  recursive_chunker_provider.py
app/services/: recursive_chunker.py
app/utils/: app_config.py  custom_rotating_file_handler.py  healthcheck_filter.py
distrib/deploy/: Jenkinsfile
distrib/docker/: Dockerfile  entrypoint.sh
distrib/templates/: deployment.yaml  service.yaml
distrib/templates/configmaps/: app-fluentbit.yaml  app-vault-agent.yaml
